fixes a gap error for cards on tablet resolution

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,6 @@ main {
         /* Columns are half of the cards' width to make the diamond shape */
         grid-template-columns: repeat(4, 167px);
         grid-template-rows: repeat(3, 1fr);
-        gap: 8px;
 
         /* Width max-content to center the grid with margin auto */
         width: max-content;
